# ongaku-server

./: .env.example  .gitignore  API.md  API_DOCS.md  Cargo.toml  LASTFM_AUTHENTICATION.md  LASTFM_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SUBSONIC_API.md  api-docs.html  audio-test.html  lastfm-example.sh  openapi.yaml  rescan-example.sh  test-api.sh  test-lastfm-auth.sh  test-subsonic-api.sh
cloudflared/: config.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  track.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240607_224721_create_table_track.rs
src/: api.rs  config.rs  lastfm.rs  library.rs  logger.rs  main.rs  scanner.rs  subsonic.rs
