[package]
name = "ongaku-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
lofty = "0.19.2"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4.21"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
chrono = "0.4.38"
futures = "0.3.30"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
entity = { path = "entity" }
migration = { path = "migration" }
async-recursion = "1.1.1"
sea-query = "0.30.7"
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
hyper = { version = "1.3.1", features = ["full"] }
dotenv = "0.15.0"
mime_guess = "2.0.4"
bytes = "1.0"
